@@ -64,7 +64,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 	private static Logger logger = LoggerFactory.getLogger(RoutingConfigurerIT.class);
 
 	private final SubscriptionRequest emptySubscriptionRequest = new SubscriptionRequest(emptySet());
-	private final Capabilities emptyCapabilities = new Capabilities(Capabilities.CapabilitiesStatus.UNKNOWN, emptySet());
+	private final NeighbourCapabilities emptyNeighbourCapabilities = new NeighbourCapabilities(CapabilitiesStatus.UNKNOWN, emptySet());
 
 	private static String AMQPS_URL;
 
@@ -112,21 +112,22 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		Shard shard = new Shard(1, "cap-ex20", "publicationId = 'pub-1'");
 		metadata.setShards(Collections.singletonList(shard));
 
-		CapabilitySplit cap = new CapabilitySplit(
+		Capability cap = new Capability(
 				new DatexApplication(
 						"NO-1234",
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
-						"RoadBlock"
+						List.of("01230122", "01230123"),
+						"RoadBlock",
+						"publisherName"
 				),
 				metadata
 		);
 		client.createHeadersExchange("cap-ex20");
 
 		ServiceProvider sp = new ServiceProvider("sp");
-		sp.setCapabilities(new Capabilities(Capabilities.CapabilitiesStatus.KNOWN, singleton(cap)));
+		sp.setCapabilities(new Capabilities(singleton(cap)));
 
 		NeighbourSubscription subscription = new NeighbourSubscription(
 				"(quadTree like '%,01230123%' OR quadTree like '%,01230122%') " +
@@ -138,7 +139,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		Set<NeighbourSubscription> subscriptions = Sets.newLinkedHashSet(subscription);
 
 		NeighbourSubscriptionRequest subscriptionRequest = new NeighbourSubscriptionRequest(subscriptions);
-		Neighbour flounder = new Neighbour("flounder", emptyCapabilities, subscriptionRequest, emptySubscriptionRequest);
+		Neighbour flounder = new Neighbour("flounder", emptyNeighbourCapabilities, subscriptionRequest, emptySubscriptionRequest);
 
 		when(serviceProviderRouter.findServiceProviders()).thenReturn(singleton(sp));
 		when(neighbourService.getNodeName()).thenReturn(qpidContainer.getvHostName());
@@ -154,14 +155,15 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		Shard shard1 = new Shard(1, "cap-ex11", "publicationId = 'pub-1'");
 		metadata1.setShards(Collections.singletonList(shard1));
 
-		CapabilitySplit cap1 = new CapabilitySplit(
+		Capability cap1 = new Capability(
 				new DatexApplication(
 						"NO-1234",
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
-						"RoadBlock"
+						List.of("01230122", "01230123"),
+						"RoadBlock",
+						"publisherName"
 				),
 				metadata1
 		);
@@ -171,21 +173,22 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		Shard shard2 = new Shard(1, "cap-ex12", "publicationId = 'pub-1'");
 		metadata2.setShards(Collections.singletonList(shard2));
 
-		CapabilitySplit cap2 = new CapabilitySplit(
+		Capability cap2 = new Capability(
 				new DatexApplication(
 						"SE-1234",
 						"pub-1",
 						"SE",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
-						"RoadBlock"
+						List.of("01230122", "01230123"),
+						"RoadBlock",
+						"publisherName"
 				),
 				metadata2
 		);
 		client.createHeadersExchange("cap-ex12");
 
 		ServiceProvider sp = new ServiceProvider("sp");
-		sp.setCapabilities(new Capabilities(Capabilities.CapabilitiesStatus.KNOWN, new HashSet<>(Arrays.asList(cap1, cap2))));
+		sp.setCapabilities(new Capabilities(new HashSet<>(Arrays.asList(cap1, cap2))));
 
 		NeighbourSubscription s1 = new NeighbourSubscription(
 				"(quadTree like '%,01230123%' OR quadTree like '%,01230122%') " +
@@ -205,7 +208,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 
 		Set<NeighbourSubscription> subscriptions = Sets.newLinkedHashSet(s1, s2);
 		NeighbourSubscriptionRequest subscriptionRequest = new NeighbourSubscriptionRequest(subscriptions);
-		Neighbour halibut = new Neighbour("halibut", emptyCapabilities, subscriptionRequest, emptySubscriptionRequest);
+		Neighbour halibut = new Neighbour("halibut", emptyNeighbourCapabilities, subscriptionRequest, emptySubscriptionRequest);
 
 		when(serviceProviderRouter.findServiceProviders()).thenReturn(singleton(sp));
 		when(neighbourService.getNodeName()).thenReturn(qpidContainer.getvHostName());
@@ -223,14 +226,15 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		Shard shard1 = new Shard(1, "cap-ex32", "publicationId = 'pub-1'");
 		metadata1.setShards(Collections.singletonList(shard1));
 
-		CapabilitySplit cap1 = new CapabilitySplit(
+		Capability cap1 = new Capability(
 				new DatexApplication(
 						"NO-1234",
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
-						"RoadBlock"
+						List.of("01230122", "01230123"),
+						"RoadBlock",
+						"publisherName"
 				),
 				metadata1
 		);
@@ -240,21 +244,22 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		Shard shard2 = new Shard(1, "cap-ex13", "publicationId = 'pub-1'");
 		metadata2.setShards(Collections.singletonList(shard2));
 
-		CapabilitySplit cap2 = new CapabilitySplit(
+		Capability cap2 = new Capability(
 				new DatexApplication(
 						"SE-1234",
 						"pub-1",
 						"SE",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
-						"RoadBlock"
+						List.of("01230122", "01230123"),
+						"RoadBlock",
+						"publisherName"
 				),
 				metadata2
 		);
 		client.createHeadersExchange("cap-ex13");
 
 		ServiceProvider sp = new ServiceProvider("sp");
-		sp.setCapabilities(new Capabilities(Capabilities.CapabilitiesStatus.KNOWN, new HashSet<>(Arrays.asList(cap1, cap2))));
+		sp.setCapabilities(new Capabilities(new HashSet<>(Arrays.asList(cap1, cap2))));
 
 		NeighbourSubscription s1 = new NeighbourSubscription(
 				"(quadTree like '%,01230123%' OR quadTree like '%,01230122%') " +
@@ -278,7 +283,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 
 		Set<NeighbourSubscription> subscriptions = Sets.newLinkedHashSet(s1, s2);
 		NeighbourSubscriptionRequest subscriptionRequest = new NeighbourSubscriptionRequest(subscriptions);
-		Neighbour salmon = new Neighbour("salmon", emptyCapabilities, subscriptionRequest, emptySubscriptionRequest);
+		Neighbour salmon = new Neighbour("salmon", emptyNeighbourCapabilities, subscriptionRequest, emptySubscriptionRequest);
 
 		when(serviceProviderRouter.findServiceProviders()).thenReturn(singleton(sp));
 		when(neighbourService.getNodeName()).thenReturn(qpidContainer.getvHostName());
@@ -304,21 +309,21 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		Shard shard = new Shard(1, "cap-ex34", "publicationId = 'pub-1'");
 		metadata.setShards(Collections.singletonList(shard));
 
-		CapabilitySplit cap = new CapabilitySplit(
+		Capability cap = new Capability(
 				new DatexApplication(
 						"SE-1234",
 						"pub-1",
 						"SE",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
-						"RoadBlock"
+						List.of("01230122", "01230123"),
+						"RoadBlock",
+						"publisherName"
 				),
 				metadata
 		);
 		client.createHeadersExchange("cap-ex34");
 
 		serviceProvider.setCapabilities(new Capabilities(
-				Capabilities.CapabilitiesStatus.KNOWN,
 				Collections.singleton(cap)
 		));
 
@@ -331,7 +336,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 				"AND publisherId = 'SE-1234'", NeighbourSubscriptionStatus.ACCEPTED, "tore-down-neighbour");
 		subs.add(neighbourSub);
 
-		Neighbour toreDownNeighbour = new Neighbour("tore-down-neighbour", emptyCapabilities, new NeighbourSubscriptionRequest(subs), emptySubscriptionRequest);
+		Neighbour toreDownNeighbour = new Neighbour("tore-down-neighbour", emptyNeighbourCapabilities, new NeighbourSubscriptionRequest(subs), emptySubscriptionRequest);
 		when(serviceProviderRouter.findServiceProviders()).thenReturn(Collections.singleton(serviceProvider));
 		when(neighbourService.getNodeName()).thenReturn("my-node");
 		when(neighbourService.getMessagePort()).thenReturn("5671");
@@ -351,21 +356,22 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		Shard shard = new Shard(1, "cap-ex1", "publicationId = 'pub-1'");
 		metadata.setShards(Collections.singletonList(shard));
 
-		CapabilitySplit cap = new CapabilitySplit(
+		Capability cap = new Capability(
 				new DatexApplication(
 						"NO-1234",
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
-						"RoadBlock"
+						List.of("01230122", "01230123"),
+						"RoadBlock",
+						"publisherName"
 				),
 				metadata
 		);
 		client.createHeadersExchange("cap-ex1");
 
 		ServiceProvider sp = new ServiceProvider("sp");
-		sp.setCapabilities(new Capabilities(Capabilities.CapabilitiesStatus.KNOWN, singleton(cap)));
+		sp.setCapabilities(new Capabilities(singleton(cap)));
 
 		HashSet<NeighbourSubscription> subs = new HashSet<>();
 		NeighbourSubscription sub = new NeighbourSubscription("(quadTree like '%,01230123%' OR quadTree like '%,01230122%') " +
@@ -376,7 +382,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 				"AND publisherId = 'NO-1234'", NeighbourSubscriptionStatus.ACCEPTED, "hammershark");
 		subs.add(sub);
 
-		Neighbour hammershark = new Neighbour("hammershark", new Capabilities(Capabilities.CapabilitiesStatus.UNKNOWN, emptySet()), new NeighbourSubscriptionRequest(subs), emptySubscriptionRequest);
+		Neighbour hammershark = new Neighbour("hammershark", new NeighbourCapabilities(CapabilitiesStatus.UNKNOWN, emptySet()), new NeighbourSubscriptionRequest(subs), emptySubscriptionRequest);
 
 		when(neighbourService.getMessagePort()).thenReturn("5671");
 		when(serviceProviderRouter.findServiceProviders()).thenReturn(singleton(sp));
@@ -392,14 +398,15 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		Shard shard1 = new Shard(1, "cap-ex2", "publicationId = 'pub-1'");
 		metadata1.setShards(Collections.singletonList(shard1));
 
-		CapabilitySplit cap1 = new CapabilitySplit(
+		Capability cap1 = new Capability(
 				new DatexApplication(
 						"NO-1234",
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
-						"RoadBlock"
+						List.of("01230122", "01230123"),
+						"RoadBlock",
+						"publisherName"
 				),
 				metadata1
 		);
@@ -409,21 +416,22 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		Shard shard2 = new Shard(1, "cap-ex3", "publicationId = 'pub-1'");
 		metadata2.setShards(Collections.singletonList(shard2));
 
-		CapabilitySplit cap2 = new CapabilitySplit(
+		Capability cap2 = new Capability(
 				new DatexApplication(
 						"SE-1234",
 						"pub-1",
 						"SE",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
-						"RoadBlock"
+						List.of("01230122", "01230123"),
+						"RoadBlock",
+						"publisherName"
 				),
 				metadata2
 		);
 		client.createHeadersExchange("cap-ex3");
 
 		ServiceProvider sp = new ServiceProvider("sp");
-		sp.setCapabilities(new Capabilities(Capabilities.CapabilitiesStatus.KNOWN, new HashSet<>(Arrays.asList(cap1, cap2))));
+		sp.setCapabilities(new Capabilities(Set.of(cap1, cap2)));
 
 		HashSet<NeighbourSubscription> subs = new HashSet<>();
 		NeighbourSubscription sub1 = new NeighbourSubscription("(quadTree like '%,01230123%' OR quadTree like '%,01230122%') " +
@@ -434,7 +442,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 				"AND publisherId = 'NO-1234'", NeighbourSubscriptionStatus.ACCEPTED, "tigershark");
 		subs.add(sub1);
 
-		Neighbour tigershark = new Neighbour("tigershark", new Capabilities(Capabilities.CapabilitiesStatus.UNKNOWN, emptySet()), new NeighbourSubscriptionRequest(subs), emptySubscriptionRequest);
+		Neighbour tigershark = new Neighbour("tigershark", new NeighbourCapabilities(CapabilitiesStatus.UNKNOWN, emptySet()), new NeighbourSubscriptionRequest(subs), emptySubscriptionRequest);
 
 		when(neighbourService.getMessagePort()).thenReturn("5671");
 		when(serviceProviderRouter.findServiceProviders()).thenReturn(singleton(sp));
@@ -468,14 +476,15 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		Shard shard1 = new Shard(1, "cap-ex4", "publicationId = 'pub-1'");
 		metadata1.setShards(Collections.singletonList(shard1));
 
-		CapabilitySplit cap1 = new CapabilitySplit(
+		Capability cap1 = new Capability(
 				new DatexApplication(
 						"NO-1234",
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230123")),
-						"RoadBlock"
+						List.of("01230123"),
+						"RoadBlock",
+						"publisherName"
 				),
 				metadata1
 		);
@@ -485,21 +494,22 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		Shard shard2 = new Shard(1, "cap-ex5", "publicationId = 'pub-1'");
 		metadata2.setShards(Collections.singletonList(shard2));
 
-		CapabilitySplit cap2 = new CapabilitySplit(
+		Capability cap2 = new Capability(
 				new DatexApplication(
 						"NO-1234",
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122")),
-						"RoadBlock"
+						List.of("01230122"),
+						"RoadBlock",
+						"publisherName"
 				),
 				metadata2
 		);
 		client.createHeadersExchange("cap-ex5");
 
 		ServiceProvider sp = new ServiceProvider("sp");
-		sp.setCapabilities(new Capabilities(Capabilities.CapabilitiesStatus.KNOWN, new HashSet<>(Arrays.asList(cap1, cap2))));
+		sp.setCapabilities(new Capabilities(Set.of(cap1, cap2)));
 
 		HashSet<NeighbourSubscription> subs = new HashSet<>();
 		NeighbourSubscription sub = new NeighbourSubscription("(quadTree like '%,01230123%' OR quadTree like '%,01230122%') " +
@@ -510,7 +520,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 				"AND publisherId = 'NO-1234'", NeighbourSubscriptionStatus.ACCEPTED, "tigershark");
 		subs.add(sub);
 
-		Neighbour tigershark = new Neighbour("tigershark", new Capabilities(Capabilities.CapabilitiesStatus.UNKNOWN, emptySet()), new NeighbourSubscriptionRequest(subs), emptySubscriptionRequest);
+		Neighbour tigershark = new Neighbour("tigershark", new NeighbourCapabilities(CapabilitiesStatus.UNKNOWN, emptySet()), new NeighbourSubscriptionRequest(subs), emptySubscriptionRequest);
 
 		when(serviceProviderRouter.findServiceProviders()).thenReturn(singleton(sp));
 		when(neighbourService.getNodeName()).thenReturn("my-name");
@@ -527,21 +537,22 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		Shard shard = new Shard(1, "cap-ex6", "publicationId = 'pub-1'");
 		metadata.setShards(Collections.singletonList(shard));
 
-		CapabilitySplit cap = new CapabilitySplit(
+		Capability cap = new Capability(
 				new DatexApplication(
 						"NO-1234",
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
-						"RoadBlock"
+						List.of("01230122", "01230123"),
+						"RoadBlock",
+						"publisherName"
 				),
 				metadata
 		);
 		client.createHeadersExchange("cap-ex6");
 
 		ServiceProvider sp = new ServiceProvider("sp");
-		sp.setCapabilities(new Capabilities(Capabilities.CapabilitiesStatus.KNOWN, singleton(cap)));
+		sp.setCapabilities(new Capabilities(singleton(cap)));
 
 		HashSet<NeighbourSubscription> subs = new HashSet<>();
 		NeighbourSubscription sub = new NeighbourSubscription("(quadTree like '%,01230123%' OR quadTree like '%,01230122%') " +
@@ -553,7 +564,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 
 		subs.add(sub);
 
-		Neighbour neigh = new Neighbour("negih-true", new Capabilities(Capabilities.CapabilitiesStatus.UNKNOWN, emptySet()), new NeighbourSubscriptionRequest(subs), emptySubscriptionRequest);
+		Neighbour neigh = new Neighbour("negih-true", new NeighbourCapabilities(CapabilitiesStatus.UNKNOWN, emptySet()), new NeighbourSubscriptionRequest(subs), emptySubscriptionRequest);
 
 		when(neighbourService.getMessagePort()).thenReturn("5671");
 		when(serviceProviderRouter.findServiceProviders()).thenReturn(singleton(sp));
@@ -567,14 +578,15 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		Shard shard1 = new Shard(1, "cap-ex7", "publicationId = 'pub-1'");
 		metadata1.setShards(Collections.singletonList(shard1));
 
-		CapabilitySplit cap1 = new CapabilitySplit(
+		Capability cap1 = new Capability(
 				new DatexApplication(
 						"NO-1234",
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
-						"RoadBlock"
+						List.of("01230122", "01230123"),
+						"RoadBlock",
+						"publisherName"
 				),
 				metadata1
 		);
@@ -584,21 +596,22 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		Shard shard2 = new Shard(1, "cap-ex8", "publicationId = 'pub-1'");
 		metadata2.setShards(Collections.singletonList(shard2));
 
-		CapabilitySplit cap2 = new CapabilitySplit(
+		Capability cap2 = new Capability(
 				new DatexApplication(
 						"SE-1234",
 						"pub-1",
 						"SE",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
-						"RoadBlock"
+						List.of("01230122", "01230123"),
+						"RoadBlock",
+						"publisherName"
 				),
 				metadata2
 		);
 		client.createHeadersExchange("cap-ex8");
 
 		ServiceProvider sp = new ServiceProvider("sp");
-		sp.setCapabilities(new Capabilities(Capabilities.CapabilitiesStatus.KNOWN, new HashSet<>(Arrays.asList(cap1, cap2))));
+		sp.setCapabilities(new Capabilities(Set.of(cap1, cap2)));
 
 		NeighbourSubscription sub1 = new NeighbourSubscription("(quadTree like '%,01230123%' OR quadTree like '%,01230122%') " +
 				"AND publicationType = 'RoadBlock' " +
@@ -618,7 +631,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		subs.add(sub1);
 		subs.add(sub2);
 
-		Neighbour neigh = new Neighbour("neigh-true-and-false", new Capabilities(Capabilities.CapabilitiesStatus.UNKNOWN, emptySet()), new NeighbourSubscriptionRequest(subs), emptySubscriptionRequest);
+		Neighbour neigh = new Neighbour("neigh-true-and-false", new NeighbourCapabilities(CapabilitiesStatus.UNKNOWN, emptySet()), new NeighbourSubscriptionRequest(subs), emptySubscriptionRequest);
 
 		when(serviceProviderRouter.findServiceProviders()).thenReturn(singleton(sp));
 		when(neighbourService.getNodeName()).thenReturn("my-name");
@@ -634,14 +647,15 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		Shard shard = new Shard(1, "cap-ex8", "publicationId = 'pub-1'");
 		metadata.setShards(Collections.singletonList(shard));
 
-		CapabilitySplit cap = new CapabilitySplit(
+		Capability cap = new Capability(
 				new DatexApplication(
 						"NO-1234",
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
-						"RoadBlock"
+						List.of("01230122", "01230123"),
+						"RoadBlock",
+						"publisherName"
 				),
 				metadata
 		);
@@ -653,10 +667,10 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 				"AND publisherId = 'NO-1234'", NeighbourSubscriptionStatus.ACCEPTED, "remote-service-provider"));
 
 		NeighbourSubscriptionRequest subscriptionRequest = new NeighbourSubscriptionRequest(subscriptions);
-		Neighbour cod = new Neighbour("cod", emptyCapabilities, subscriptionRequest, emptySubscriptionRequest);
+		Neighbour cod = new Neighbour("cod", emptyNeighbourCapabilities, subscriptionRequest, emptySubscriptionRequest);
 
 		ServiceProvider serviceProvider = new ServiceProvider();
-		serviceProvider.setCapabilities(new Capabilities(Capabilities.CapabilitiesStatus.KNOWN, singleton(cap)));
+		serviceProvider.setCapabilities(new Capabilities(singleton(cap)));
 
 		when(serviceProviderRouter.findServiceProviders()).thenReturn(singleton(serviceProvider));
 		routingConfigurer.setupNeighbourRouting(cod, client.getQpidDelta());
@@ -674,7 +688,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 				"AND publisherId = 'NO-1234'", NeighbourSubscriptionStatus.ACCEPTED, "no-clownfish"));
 
 		NeighbourSubscriptionRequest subscriptionRequest = new NeighbourSubscriptionRequest(subscriptions);
-		Neighbour clownfish = new Neighbour("clownfish", emptyCapabilities, subscriptionRequest, emptySubscriptionRequest);
+		Neighbour clownfish = new Neighbour("clownfish", emptyNeighbourCapabilities, subscriptionRequest, emptySubscriptionRequest);
 
 		routingConfigurer.setupNeighbourRouting(clownfish, client.getQpidDelta());
 		assertThat(client.queueExists(clownfish.getName())).isFalse();
@@ -686,21 +700,22 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		Shard shard = new Shard(1, "cap-ex9", "publicationId = 'pub-1'");
 		metadata.setShards(Collections.singletonList(shard));
 
-		CapabilitySplit cap = new CapabilitySplit(
+		Capability cap = new Capability(
 				new DatexApplication(
 						"NO-1234",
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
-						"RoadBlock"
+						List.of("01230122", "01230123"),
+						"RoadBlock",
+						"publisherName"
 				),
 				metadata
 		);
 		client.createHeadersExchange("cap-ex9");
 
 		ServiceProvider sp = new ServiceProvider("sp");
-		sp.setCapabilities(new Capabilities(Capabilities.CapabilitiesStatus.KNOWN, singleton(cap)));
+		sp.setCapabilities(new Capabilities(singleton(cap)));
 
 		NeighbourSubscription sub1 = new NeighbourSubscription("(quadTree like '%,01230123%' OR quadTree like '%,01230122%') " +
 				"AND publicationType = 'RoadBlock' " +
@@ -720,7 +735,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		subs.add(sub1);
 		subs.add(sub2);
 
-		Neighbour neigh = new Neighbour("neigh-both", new Capabilities(Capabilities.CapabilitiesStatus.UNKNOWN, emptySet()), new NeighbourSubscriptionRequest(subs), emptySubscriptionRequest);
+		Neighbour neigh = new Neighbour("neigh-both", new NeighbourCapabilities(CapabilitiesStatus.UNKNOWN, emptySet()), new NeighbourSubscriptionRequest(subs), emptySubscriptionRequest);
 
 		when(serviceProviderRouter.findServiceProviders()).thenReturn(singleton(sp));
 		when(neighbourService.getNodeName()).thenReturn("my-name");
@@ -742,21 +757,21 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		Shard shard = new Shard(1, "cap-ex10", "publicationId = 'pub-1'");
 		metadata.setShards(Collections.singletonList(shard));
 
-		CapabilitySplit cap = new CapabilitySplit(
+		Capability cap = new Capability(
 				new DenmApplication(
 						"NO-123",
 						"pub-1",
 						"NO",
 						"DENM:1.2.2",
-						new HashSet<>(Arrays.asList("12004")),
-						new HashSet<>(Arrays.asList(6))
+						List.of("12004"),
+						List.of(6)
 				),
 				metadata
 		);
 		client.createHeadersExchange("cap-ex10");
 
 		ServiceProvider sp = new ServiceProvider("sp");
-		sp.setCapabilities(new Capabilities(Capabilities.CapabilitiesStatus.KNOWN, singleton(cap)));
+		sp.setCapabilities(new Capabilities(singleton(cap)));
 
 		MessageValidatingSelectorCreator creator = new MessageValidatingSelectorCreator();
 		String capabilitySelector = creator.makeSelector(cap);
@@ -773,7 +788,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		HashSet<NeighbourSubscription> subs = new HashSet<>();
 		subs.add(sub);
 
-		Neighbour neigh = new Neighbour("neigh10", new Capabilities(Capabilities.CapabilitiesStatus.UNKNOWN, emptySet()), new NeighbourSubscriptionRequest(subs), emptySubscriptionRequest);
+		Neighbour neigh = new Neighbour("neigh10", new NeighbourCapabilities(CapabilitiesStatus.UNKNOWN, emptySet()), new NeighbourSubscriptionRequest(subs), emptySubscriptionRequest);
 
 		when(serviceProviderRouter.findServiceProviders()).thenReturn(singleton(sp));
 		when(neighbourService.getNodeName()).thenReturn("my-name");
@@ -975,6 +990,38 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 	}
 
 	@Test
+	public void teardownSubscriptionWhereEndpointHasNoShard() {
+		Subscription subscritption = new Subscription(
+				SubscriptionStatus.TEAR_DOWN,
+				"a = b",
+				"/subscriptoins/foo",
+				"my-node",
+				Set.of(
+						new Endpoint(
+								"source",
+								"host",
+								1234
+						)
+				)
+		);
+		Neighbour neighbour = new Neighbour(
+				"neighbour",
+				new NeighbourCapabilities(),
+				new NeighbourSubscriptionRequest(),
+				new SubscriptionRequest(
+						Set.of(
+								subscritption
+						)
+				)
+		);
+		when(interchangeNodeProperties.getName()).thenReturn("my-node");
+		when(neighbourService.findAllNeighbours()).thenReturn(List.of(neighbour));
+		routingConfigurer.tearDownSubscriptionExchanges();
+		assertThat(subscritption.getEndpoints()).isEmpty();
+		verify(neighbourService,times(1)).saveNeighbour(neighbour);
+	}
+
+	@Test
 	public void subscriptionExchangeAndSubscriptionShardIsRemovedWhenSubscriptionHasStatusFailed() {
 		String exchangeName = "failed-exchange";
 		Subscription subscription = new Subscription("originatingCountry = 'NO'", SubscriptionStatus.FAILED);
@@ -1024,14 +1071,14 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 
 	@Test
 	public void setupRegularRoutingWithNonExistingExchangeKeepsTheSubscriptionUnchanged() {
-		CapabilitySplit denmCapability = new CapabilitySplit(
+		Capability denmCapability = new Capability(
 				new DenmApplication(
 						"NO0000",
 						"NO0000:001",
 						"NO",
 						"1.0",
-						Collections.singleton("0122"),
-						Collections.singleton(1)
+						List.of("0122"),
+						List.of(1)
 				),
 				new Metadata(RedirectStatus.NOT_AVAILABLE)
 		);
@@ -1069,7 +1116,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		subscription.setEndpoints(Collections.singleton(endpoint));
 		Neighbour neighbour = new Neighbour(
 				neighbourName,
-				new Capabilities(),
+				new NeighbourCapabilities(),
 				new NeighbourSubscriptionRequest(
 						Collections.singleton(subscription)
 				),
@@ -1116,7 +1163,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		nonTearDownSubscription.setEndpoints(Collections.singleton(nonTearDownEndpoint));
 		Neighbour neighbour = new Neighbour(
 				neighbourName,
-				new Capabilities(),
+				new NeighbourCapabilities(),
 				new NeighbourSubscriptionRequest(
 						new HashSet<>(Arrays.asList(subscription,nonTearDownSubscription))
 				),
@@ -1164,7 +1211,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		String neighbourName = "redirect-neighbour";
 		Neighbour neighbour = new Neighbour(
 				neighbourName,
-				new Capabilities(),
+				new NeighbourCapabilities(),
 				new NeighbourSubscriptionRequest(
 						Collections.singleton(subscription)
 				),
@@ -1214,7 +1261,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		String neighbourName = "redirect-neighbour";
 		Neighbour neighbour = new Neighbour(
 				neighbourName,
-				new Capabilities(),
+				new NeighbourCapabilities(),
 				new NeighbourSubscriptionRequest(
 						new HashSet<>(Arrays.asList(subscription,nonTearDownSubscription))
 				),
@@ -1276,7 +1323,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		String neighbourName = "redirect-neighbour-xx";
 		Neighbour neighbour = new Neighbour(
 				neighbourName,
-				new Capabilities(),
+				new NeighbourCapabilities(),
 				new NeighbourSubscriptionRequest(
 						new HashSet<>(Arrays.asList(subscription,nonTearDownSubscription))
 				),
